fix: disable all console log

--- a/public/index.html
+++ b/public/index.html
@@ -69,16 +69,16 @@
     window.addEventListener('load', function() {
       navigator.serviceWorker.register('service-worker.js').then(function(registration) {
         // Registration was successful
-        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        // console.log('ServiceWorker registration successful with scope: ', registration.scope);
       }, function(err) {
         // registration failed :(
-        console.log('ServiceWorker registration failed: ', err);
+        // console.log('ServiceWorker registration failed: ', err);
       }).catch(function(err) {
-        console.log(err)
+        // console.log(err)
       });
     });
   } else {
-    console.log('service worker is not supported');
+    // console.log('service worker is not supported');
   }
 </script>
 
