--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,23 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Playing Card Game! by @yeahch. Pick same card, then you win!"
     />
+    <meta property="og:title" content="Playing Card Game: 60K. Simple Game. Happy Playing!" />
+    <meta property="og:description" content="Let us play card game 60K! Select same cards, then disappear." />
+    <meta property="og:url" content="https://yeahch.github.io/playing-card/" />
+    <meta property="og:site_name" content="60K" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Playing Card Game: 60K" />
+    <meta name="twitter:description" content="Let us play card game 60K! Select same cards, then disappear." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta name="twitter:label1" content="Est. playing time">
+    <meta name="twitter:data1" content="5 minutes">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
